--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ git+https://github.com/Rapptz/discord.py@rewrite
 dnspython==1.16.0
 PyNaCl==1.3.0
 async-timeout==3.0.1
-SQLAlchemy=1.3.16
+SQLAlchemy==1.3.16
